# zenith-template-cpp

./: CMakeLists.txt  MyProject.cpp  MyProject.hpp  [TEMPLATE]README.md
.github/workflows/: compiling-testing.yml  compilingTesting.yml
test/: CMakeLists.txt  MyProjectTests.cpp
